Fix menu spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,10 @@ p {
     font-size: 1.1em;
 }
 
+.container {
+    max-width: auto;
+    margin: 0 auto;
+}
 .text-white {
     color: #ffffff;
 }
@@ -45,10 +49,11 @@ p {
     100% { background-image: url("../imgs/animation/img7.jpg");}
 
 }
-
+.nav {
+    margin: 0 auto;
+}
 .nav section {
     display: inline-block;
-    margin-left: 2em;
     font-size: 13px;
 }
 
@@ -83,7 +88,7 @@ p {
 
 .nav-image img{
     max-width: 13em;
-    margin: 2.5em 7em 0em 4em;
+    margin: 3em 7em 0em 0em;
 }
 
 .my-button {
@@ -146,6 +151,10 @@ p {
     justify-content: flex-end;
 }
 
+.my-justify-content-space-around {
+    justify-content: space-around;
+}
+
 .my-align-items-start {
     align-items: flex-start;
 }
@@ -164,6 +173,10 @@ p {
 
 .my-width-100 {
     width: 100%;
+}
+
+.my-margin {
+    margin-left: 130px;
 }
 
 .principal {
@@ -360,11 +373,6 @@ p {
         top: 1em;
     }
 
-    .nav-image img{
-        max-width: 13em;
-        margin: 1em;
-    }
-
     .principal {
         margin-top: 1em;
         margin-bottom: 1em;
@@ -407,11 +415,6 @@ p {
         top: 1em;
     }
 
-    .nav-image img{
-        max-width: 13em;
-        margin: 1em;
-    }
-
     .principal {
         margin-top: 4em;
         margin-bottom: 1em;
@@ -452,11 +455,6 @@ p {
         position: absolute;
         right: 1em;
         top: 1em;
-    }
-
-    .nav-image img{
-        max-width: 13em;
-        margin: 1em;
     }
 
     .principal {
@@ -519,11 +517,6 @@ p {
         top: 1em;
     }
 
-    .nav-image img{
-        max-width: 13em;
-        margin: 1em;
-    }
-
     .buttons {
         margin-top: 1em;
     }
@@ -559,11 +552,6 @@ p {
         position: absolute;
         right: 1em;
         top: 1em;
-    }
-
-    .nav-image img{
-        max-width: 13em;
-        margin: 1em;
     }
 
     .buttons {
@@ -602,11 +590,6 @@ p {
         top: 1em;
     }
 
-    .nav-image img{
-        max-width: 13em;
-        margin: 1em;
-    }
-    
     .buttons {
         margin-top: 0.5em;
     }
@@ -642,11 +625,6 @@ p {
         position: absolute;
         right: 1em;
         top: 1em;
-    }
-
-    .nav-image img{
-        max-width: 13em;
-        margin: 1em;
     }
 
     .slogan {
